feat(jwt): abstract jwt sign/verify/decode & fix(controllers): fix controllers to get userId from request & fix(docs): implement bearer token auth on swagger
